Actually add sos_test to the application build menu.

--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -5,6 +5,7 @@ config SEL4_APPS_PATH
 menu "seL4 Applications"
 
 source "$SEL4_APPS_PATH/sos/Kconfig"
+source "$SEL4_APPS_PATH/sos_test/Kconfig"
 source "$SEL4_APPS_PATH/sosh/Kconfig"
 source "$SEL4_APPS_PATH/tty_test/Kconfig"
 
