--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -2,6 +2,7 @@ apps-$(CONFIG_APP_SOS) += sos
 
 sos-components-$(CONFIG_APP_SOSH) += sosh
 sos-components-$(CONFIG_APP_TTY_TEST) += tty_test
+sos-components-$(CONFIG_APP_SOS_TEST) += sos_test
 sos-components=$(addprefix $(STAGE_BASE)/bin/, $(sos-components-y))
 
 sos: export COMPONENTS=${sos-components}
