YOU KNOW, I DON'T FUCKING KNOW ANYMORE. BUT IT DOES IPC BETWEEN THREADS. SOMEHOW.
I might need this later when I manage to break everything again.

--HG--
branch : seedless

--- a/apps/dev_console/Kbuild
+++ b/apps/dev_console/Kbuild
@@ -1,4 +1,4 @@
 components-$(CONFIG_APP_DEV_CONSOLE) += dev_console
 
-dev_console: $(libc) libsel4 libsos
+dev_console: $(libc) libsel4 libsos libsel4cspace
 
