--- a/apps/dev_console/Kconfig
+++ b/apps/dev_console/Kconfig
@@ -1,6 +1,6 @@
 config APP_DEV_CONSOLE
     bool "Console device"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_SEL4_CSPACE
     default n
     select HAVE_SEL4_APPS
     help
