--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -5,6 +5,7 @@ sos-components-$(CONFIG_APP_TTY_TEST) += tty_test
 sos-components-$(CONFIG_APP_SOS_TEST) += sos_test
 
 sos-components-$(CONFIG_APP_DEV_CONSOLE) += dev_console
+sos-components-$(CONFIG_APP_DEV_TIMER) += dev_timer
 sos-components-$(CONFIG_APP_SVC_NETWORK) += svc_network
 
 sos-components=$(addprefix $(STAGE_BASE)/bin/, $(sos-components-y))
