--- a/apps/svc_vfs/Kconfig
+++ b/apps/svc_vfs/Kconfig
@@ -1,6 +1,6 @@
 config APP_SVC_VFS
     bool "Virtual file system service"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_SEL4_CSPACE
     default n
     select HAVE_SEL4_APPS
     help
