wow big commit. such progress. wow. very operating system. wow. wow.
--HG--
branch : seedless
rename : libs/libsos/src/sys_exit.c => libs/libpawpaw/src/sys_exit.c

--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -19,5 +19,5 @@ sos: ${sos-components-y} \
      libsel4 libsel4elf $(libc) libcpio \
      libsel4cspace libsel4sync libserial libclock \
      liblwip libnfs libethdrivers \
-     libsos
+     libsos libpawpaw
 
