--- a/libs/libsos/Kconfig
+++ b/libs/libsos/Kconfig
@@ -1,6 +1,7 @@
 config LIB_SOS
     bool "Build sos library"
     select HAVE_SEL4_LIBS
+    select LIB_PAWPAW
     default y
     help
         "C platform dependant function implementations for sos clients"
