--- a/apps/sos/Kconfig
+++ b/apps/sos/Kconfig
@@ -14,6 +14,7 @@ menuconfig APP_SOS
     select LIB_SERIAL 
     select LIB_CLOCK
     select LIB_SOS
+    select LIB_PAWPAW
     default y
     help
         Simple Operating System (aka AOS implementation)
