--- a/apps/sos/Makefile
+++ b/apps/sos/Makefile
@@ -18,7 +18,7 @@ INCLUDE_DIRS  += $(SOURCE_DIR)/src
 
 # Libraries required to build the target
 LIBS := sel4 elf sel4c cpio lwip ethdrivers \
-	 sel4sync serial nfs clock sel4cspace
+	 sel4sync serial nfs clock sel4cspace pawpaw
 
 include $(SEL4_COMMON)/common.mk
 
