--- a/apps/sos_test/Kconfig
+++ b/apps/sos_test/Kconfig
@@ -1,6 +1,6 @@
 config APP_SOS_TEST
     bool "SOS tests"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_PAWPAW
     default y
     select HAVE_SEL4_APPS
     help
