--- a/apps/sos_test/Makefile
+++ b/apps/sos_test/Makefile
@@ -6,6 +6,6 @@ CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/crt0.S))
 
 # Libraries required to build the target
-LIBS := sel4c sel4 sos 
+LIBS := sel4c sel4 sos pawpaw
 #export DEBUG=1
 include $(SEL4_COMMON)/common.mk
