--- a/apps/sosh/Kconfig
+++ b/apps/sosh/Kconfig
@@ -1,6 +1,6 @@
 config APP_SOSH
     bool "SOSH"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_PAWPAW
     default n
     select HAVE_SEL4_APPS
     help
