--- a/apps/dev_console/Kbuild
+++ b/apps/dev_console/Kbuild
@@ -1,4 +1,4 @@
 components-$(CONFIG_APP_DEV_CONSOLE) += dev_console
 
-dev_console: $(libc) libsel4 libsos libsel4cspace
+dev_console: $(libc) libsel4 libsos libpawpaw
 
