--- a/apps/svc_dev/Kconfig
+++ b/apps/svc_dev/Kconfig
@@ -1,7 +1,7 @@
-config APP_FS_DEV
-    bool "Device filesystem"
+config APP_SVC_DEV
+    bool "Device service"
     depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_PAWPAW
     default n
     select HAVE_SEL4_APPS
     help
-        Device file system server
+        Device server
