--- a/apps/svc_dev/Makefile
+++ b/apps/svc_dev/Makefile
@@ -1,5 +1,3 @@
-# @LICENSE(NICTA_CORE)
-
 # Targets
 TARGETS := $(notdir $(SOURCE_DIR)).bin
 
@@ -8,7 +6,6 @@ CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/crt0.S))
 
 # Libraries required to build the target
-LIBS := sel4c sel4 pawpaw sos
-# FIXME: shouldn't need SOS!! at the moment only need for debug stuff
+LIBS := sel4c sel4 sos pawpaw
 
 include $(SEL4_COMMON)/common.mk
