--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -14,7 +14,6 @@ source "$SEL4_APPS_PATH/dev_console/Kconfig"
 source "$SEL4_APPS_PATH/dev_timer/Kconfig"
 endmenu
 
-
 menu "Services"
 source "$SEL4_APPS_PATH/svc_network/Kconfig"
 source "$SEL4_APPS_PATH/svc_vfs/Kconfig"
@@ -24,6 +23,10 @@ menu "Filesystems"
 source "$SEL4_APPS_PATH/fs_dev/Kconfig"
 source "$SEL4_APPS_PATH/fs_cpio/Kconfig"
 endmenu
+endmenu
+
+menu "Tests"
+source "$SEL4_APPS_PATH/test_runner/Kconfig"
 endmenu
 
 endmenu
