--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -27,6 +27,8 @@ endmenu
 
 menu "Tests"
 source "$SEL4_APPS_PATH/test_runner/Kconfig"
+source "$SEL4_APPS_PATH/test_share_a/Kconfig"
+source "$SEL4_APPS_PATH/test_share_b/Kconfig"
 endmenu
 
 endmenu
