--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -15,6 +15,8 @@ sos-components-$(CONFIG_APP_FS_DEV) += fs_dev
 
 sos-components-$(CONFIG_APP_TEST_RUNNER) += test_runner
 
+sos-components-$(CONFIG_APP_TEST_SHARE_A) += test_share_a test_share_b
+
 sos-components=$(addprefix $(STAGE_BASE)/bin/, $(sos-components-y))
 
 sos: export COMPONENTS=${sos-components}
