--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -8,6 +8,7 @@ source "$SEL4_APPS_PATH/sos/Kconfig"
 source "$SEL4_APPS_PATH/sos_test/Kconfig"
 source "$SEL4_APPS_PATH/sosh/Kconfig"
 source "$SEL4_APPS_PATH/tty_test/Kconfig"
+source "$SEL4_APPS_PATH/forkbomb/Kconfig"
 
 menu "Devices"
 source "$SEL4_APPS_PATH/dev_console/Kconfig"
