--- a/apps/svc_network/Kbuild
+++ b/apps/svc_network/Kbuild
@@ -1,4 +1,4 @@
 components-$(CONFIG_APP_SVC_NETWORK) += svc_network
 
-svc_network: $(libc) libsel4 libsos
+svc_network: $(libc) libsel4 libsos liblwip libethdrivers libsel4sync libpawpaw
 
