--- a/apps/svc_network/Kconfig
+++ b/apps/svc_network/Kconfig
@@ -1,6 +1,6 @@
 config APP_SVC_NETWORK
     bool "Networking service"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_ETHIF && LIB_LWIP && LIB_SEL4_SYNC
     default n
     select HAVE_SEL4_APPS
     help
