--- a/apps/svc_network/Makefile
+++ b/apps/svc_network/Makefile
@@ -7,7 +7,9 @@ TARGETS := $(notdir $(SOURCE_DIR)).bin
 CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/crt0.S))
 
+INCLUDE_DIRS  += $(SOURCE_DIR)/src 
+
 # Libraries required to build the target
-LIBS := sel4c sel4 sos
+LIBS := sel4c sel4 sos lwip ethdrivers sel4sync pawpaw
 
 include $(SEL4_COMMON)/common.mk
