Rename svc_network -> svc_net
--HG--
branch : seedless
rename : apps/svc_network/Kbuild => apps/svc_net/Kbuild
rename : apps/svc_network/Kconfig => apps/svc_net/Kconfig
rename : apps/svc_network/Makefile => apps/svc_net/Makefile
rename : apps/svc_network/crt/arch-arm/crt0.S => apps/svc_net/crt/arch-arm/crt0.S
rename : apps/svc_network/crt/arch-ia32/crt0.s => apps/svc_net/crt/arch-ia32/crt0.s
rename : apps/svc_network/src/dma.c => apps/svc_net/src/dma.c
rename : apps/svc_network/src/dma.h => apps/svc_net/src/dma.h
rename : apps/svc_network/src/network.c => apps/svc_net/src/network.c
rename : apps/svc_network/src/network.h => apps/svc_net/src/network.h
rename : apps/svc_network/src/service.c => apps/svc_net/src/service.c

--- a/apps/svc_net/Kbuild
+++ b/apps/svc_net/Kbuild
@@ -1,4 +1,4 @@
-components-$(CONFIG_APP_SVC_NETWORK) += svc_network
+components-$(CONFIG_APP_SVC_NET) += svc_net
 
 svc_network: $(libc) libsel4 libsos liblwip libethdrivers libsel4sync libpawpaw
 
