--- a/apps/svc_net/Kconfig
+++ b/apps/svc_net/Kconfig
@@ -1,4 +1,4 @@
-config APP_SVC_NETWORK
+config APP_SVC_NET
     bool "Networking service"
     depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_ETHIF && LIB_LWIP && LIB_SEL4_SYNC
     default n
