--- a/apps/svc_net/Kbuild
+++ b/apps/svc_net/Kbuild
@@ -1,4 +1,4 @@
 components-$(CONFIG_APP_SVC_NET) += svc_net
 
-svc_network: $(libc) libsel4 libsos liblwip libethdrivers libsel4sync libpawpaw
+svc_net: $(libc) libsel4 libsos liblwip libethdrivers libsel4sync libpawpaw libnfs
 
