Cool, almost there, although for some reason we can't resend caps, so subsequent open()s fail.
--HG--
branch : seedless

--- a/apps/svc_net/Kbuild
+++ b/apps/svc_net/Kbuild
@@ -1,4 +1,4 @@
 components-$(CONFIG_APP_SVC_NET) += svc_net
 
-svc_net: $(libc) libsel4 libsos liblwip libethdrivers libsel4sync libpawpaw libnfs
+svc_net: $(libc) libsel4 liblwip libethdrivers libsel4sync libpawpaw libnfs
 
