--- a/apps/svc_dev/Kconfig
+++ b/apps/svc_dev/Kconfig
@@ -1,6 +1,6 @@
 config APP_SVC_DEV
     bool "Device service"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_PAWPAW
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_PAWPAW
     default n
     select HAVE_SEL4_APPS
     help
