--- a/apps/svc_dev/Makefile
+++ b/apps/svc_dev/Makefile
@@ -6,6 +6,6 @@ CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/crt0.S))
 
 # Libraries required to build the target
-LIBS := sel4c sel4 sos pawpaw
+LIBS := sel4c sel4 pawpaw
 
 include $(SEL4_COMMON)/common.mk
