--- a/apps/thrash/Kconfig
+++ b/apps/thrash/Kconfig
@@ -1,7 +1,7 @@
 config APP_THRASH
     bool "Page thrasher"
     depends on LIB_SEL4 && LIB_SEL4_C && LIB_SOS && LIB_PAWPAW
-    default y
+    default n
     select HAVE_SEL4_APPS
     help
         Surely you could just download more RAM?
