--- a/apps/sos/Kconfig
+++ b/apps/sos/Kconfig
@@ -1,40 +1,14 @@
-menuconfig APP_SOS
-    bool "SeL4 Simple Operating System (SOS)"
+config APP_SOS
+    bool "Papaya"
     select LIB_SEL4 
     select LIB_SEL4_C
     select LIB_SEL4_ELF
     select LIB_CPIO
     select LIB_SEL4_CSPACE 
-    select LIB_SEL4_SYNC
     select LIB_IXP400_XSCALE_SW if IXP400
     select LIB_IXP_OSAL if IXP400
-    select LIB_ETHIF
-    select LIB_LWIP 
-    select LIB_NFS 
-    select LIB_SERIAL 
-    select LIB_CLOCK
     select LIB_SOS
     select LIB_PAWPAW
     default y
     help
         Simple Operating System (aka AOS implementation)
-
-config SOS_NETMASK
-    string "Network mask"
-    depends on APP_SOS
-    default "225.225.225.0"
-
-config SOS_IP
-    string "IP address"
-    depends on APP_SOS
-    default "192.168.168.2"
-
-config SOS_GATEWAY
-    string "Gateway IP address"
-    depends on APP_SOS
-    default "192.168.168.1"
-
-config SOS_NFS_DIR
-    string "NFS directory"
-    depends on APP_SOS
-    default "/var/tftpboot/USER"
