--- a/apps/sos/Makefile
+++ b/apps/sos/Makefile
@@ -20,8 +20,7 @@ OFILES   := archive.o
 INCLUDE_DIRS  += $(SOURCE_DIR)/src 
 
 # Libraries required to build the target
-LIBS := sel4 elf sel4c cpio lwip ethdrivers \
-	 sel4sync serial nfs clock sel4cspace pawpaw
+LIBS := sel4 elf sel4c cpio sel4cspace pawpaw
 
 include $(SEL4_COMMON)/common.mk
 
