--- a/apps/svc_vfs/Kconfig
+++ b/apps/svc_vfs/Kconfig
@@ -1,7 +1,7 @@
 config APP_SVC_VFS
     bool "Virtual file system service"
-    depends on LIB_SEL4 && LIB_SEL4_C && LIB_PAWPAW
-    default n
+    depends on LIB_SEL4 && LIB_SEL4_C && LIB_PAWPAW && LIB_SOS
+    default y
     select HAVE_SEL4_APPS
     help
         VFS server
